--- a/libreoffice/Dockerfile
+++ b/libreoffice/Dockerfile
@@ -1,20 +1,21 @@
-FROM alpine:latest
+FROM alpine
 
-RUN apk update && apk add openjdk8 ttf-dejavu
-RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
-RUN apk update && apk add \
-	boost-program_options \
-	libreoffice 
-	
-RUN adduser bwen --disabled-password 
-RUN chown bwen:bwen -R /gui-app
+RUN apk update && apk add --no-cache \
+	--repository http://dl-cdn.alpinelinux.org/alpine/v3.12/community \
+	ca-certificates \
+	hicolor-icon-theme \
+	mesa-dri-intel \
+	mesa-gl \
+	ttf-dejavu \
+	libreoffice
 
-WORKDIR /home/bwen
+ENV LANG en-US
 
-ENV USER=bwen
-ENV HOME=/home/bwen
-ENV PATH=/home/bwen/.cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/bwen/bin
+RUN adduser --shell ash -h /home/gui -D gui
 
-
-USER bwen
+USER gui
+RUN mkdir -p /home/gui/.cache
+RUN mkdir -p /home/gui/.config
+RUN mkdir -p /home/gui/Downloads
+RUN mkdir -p /home/gui/Documents
 ENTRYPOINT [ "libreoffice" ]
