--- a/postman/Dockerfile
+++ b/postman/Dockerfile
@@ -1,22 +1,30 @@
 FROM debian
 
-RUN apt-get update && apt-get -y install wget openssl curl
+RUN apt-get update && apt-get install -y --no-install-recommends \
+	apt-transport-https \
+	ca-certificates \
+	wget \
+	openssl \
+	curl \
+	libgtk-3.0 \
+	libx11-xcb1 \
+	libxss1 \
+	libnss3 \
+	libasound2 \
+	libxtst6
 
-COPY Postman-linux-x64-7.20.1.tar.gz .
-RUN tar -xf Postman-linux-x64-7.20.1.tar.gz && mv Postman /gui-app
+ENV FILE="linux64"
+RUN wget -q https://dl.pstmn.io/download/latest/$FILE
 
-RUN apt-get -y install libgtk-3.0 libx11-xcb1 libxss1 libnss3 libasound2
+RUN mkdir /gui-app
+RUN tar -C /gui-app -xf $FILE --strip 1
 
-RUN adduser bwen 
-RUN chown bwen:bwen -R /gui-app
+RUN adduser --home /home/gui --disabled-password gui
+RUN chown gui:gui -R /gui-app
 
-WORKDIR /home/bwen
+USER gui
+RUN mkdir -p /home/gui/Postman
+RUN mkdir -p /home/gui/.cache
+RUN mkdir -p /home/gui/.swt
 
-ENV USER=bwen
-ENV HOME=/home/bwen
-ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/bwen/bin
-
-RUN echo '%bwen ALL=(ALL:ALL) NOPASSWD: ALL' >> /etc/sudoers
-
-USER bwen
 CMD ["/gui-app/app/Postman"]
