--- a/chrome/Dockerfile
+++ b/chrome/Dockerfile
@@ -1,35 +1,37 @@
 FROM debian
 
-RUN apt-get update && apt-get -y install wget openssl curl
-
-COPY google-chrome-stable_current_amd64.deb .
-RUN apt-get -y update
-RUN apt-get -y install sudo libgtk-3.0 libx11-xcb1 libxss1 libnss3 libasound2 fonts-liberation libappindicator3-1 xdg-utils
-
-RUN dpkg -i google-chrome-stable_current_amd64.deb
-
 RUN apt-get update && apt-get install -y \
 	apt-transport-https \
 	ca-certificates \
+	curl \
 	gnupg \
 	hicolor-icon-theme \
 	libcanberra-gtk* \
 	libgl1-mesa-dri \
 	libgl1-mesa-glx \
-	libpango1.0-0 \
+	libpangox-1.0-0 \
 	libpulse0 \
-	pulseaudio \
 	libv4l-0 \
 	fonts-symbola \
+	libgtk-3.0 libx11-xcb1 libxss1 libnss3 libasound2 fonts-liberation libappindicator3-1 xdg-utils \
 	--no-install-recommends
 
-RUN adduser bwen --disabled-password 
-RUN echo '%bwen ALL=(ALL:ALL) NOPASSWD: ALL' >> /etc/sudoers
-WORKDIR /home/bwen
+RUN curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
+	&& echo "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
 
-ENV USER=bwen
-ENV HOME=/home/bwen
-ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/bwen/bin
+RUN apt-get update && apt-get install -y \
+	google-chrome-stable \
+	--no-install-recommends \
+	&& apt-get purge --auto-remove -y curl \
+	&& rm -rf /var/lib/apt/lists/*
 
-USER bwen
-CMD ["/opt/google/chrome/chrome"]
+RUN adduser --home /home/chrome --disabled-password chrome \
+    && mkdir -p /home/chrome/Downloads \
+    && mkdir -p /home/chrome/.local \
+    && mkdir -p /home/chrome/.cache \
+    && mkdir -p /data \
+    && chown -R chrome:chrome /data \
+    && chown -R chrome:chrome /home/chrome
+
+USER chrome
+CMD ["/opt/google/chrome/chrome", "--user-data-dir=/data"]
