--- a/dbeaver/Dockerfile
+++ b/dbeaver/Dockerfile
@@ -1,22 +1,29 @@
 FROM debian
 
-ENV VERSION 6.3.5
-RUN apt-get update && apt-get -y install wget
-RUN wget -q https://github.com/dbeaver/dbeaver/releases/download/${VERSION}/dbeaver-ce-${VERSION}-linux.gtk.x86_64.tar.gz
-RUN tar -xf dbeaver-ce-${VERSION}-linux.gtk.x86_64.tar.gz && mv dbeaver /gui-app
+RUN apt-get update && apt-get install -y --no-install-recommends \
+	apt-transport-https \
+	ca-certificates \
+	wget \
+	openssl \
+	curl \
+	git \
+	openjdk-11-jdk \
+	libswt-gtk-4-jni
 
-RUN apt-get install -y openjdk-11-jdk
+ENV VERSION="7.1.0"
+ENV FILE="dbeaver-ce-"${VERSION}"-linux.gtk.x86_64.tar.gz"
 
-RUN adduser bwen
-RUN chown bwen:bwen -R /gui-app
+RUN wget -q https://github.com/dbeaver/dbeaver/releases/download/${VERSION}/${FILE}
 
-WORKDIR /home/bwen
+RUN mkdir /gui-app
+RUN tar -C /gui-app -xf $FILE --strip 1
 
-ENV USER=bwen
-ENV HOME=/home/bwen
-ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/bwen/bin
-ENV TERM=xterm-256color
-ENV PS1="\[\033[0;32m\]\t \[\033[0;31m\]\u\[\033[22;33m\]@\[\033[0;36m\]\h:\[\033[0;34m\]\w\[\033[0;37m\]:"
+RUN adduser --home /home/gui --disabled-password gui
+RUN chown gui:gui -R /gui-app
 
-USER bwen
+USER gui
+RUN mkdir -p /home/gui/.java
+RUN mkdir -p /home/gui/.local
+RUN mkdir -p /home/gui/.eclipse
+
 CMD ["/gui-app/dbeaver"]
