--- a/clion/Dockerfile
+++ b/clion/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	openssl \
 	curl \
 	git \
-	openjdk-11-jdk 
+	openjdk-11-jdk\
+	openjfx
 
 ENV VERSION="2020.1"
 ENV FILE="CLion-"${VERSION}".1.tar.gz"
@@ -28,6 +29,7 @@ RUN sed -i 's/PS1=/PS2=/g' /etc/bash.bashrc
 USER gui
 RUN mkdir -p /home/gui/.java
 RUN mkdir -p /home/gui/.Clion${VERSION}
+RUN mkdir -p /home/gui/.config
 RUN mkdir -p /home/gui/.rustup
 RUN mkdir -p /home/gui/.cargo
 RUN mkdir -p /home/gui/.xcargo
