Added optional gitconfigs + fixed Clion for Rust + fixed Intellji built-in terminal

--- a/clion/Dockerfile
+++ b/clion/Dockerfile
@@ -17,7 +17,6 @@ RUN wget -q https://download.jetbrains.com/cpp/${FILE}
 RUN mkdir /gui-app
 RUN tar -C /gui-app -xf $FILE --strip 1
 
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 RUN apt-get update && apt-get install -y \
 	make cmake gcc g++
 
@@ -27,8 +26,10 @@ RUN chown gui:gui -R /gui-app
 RUN sed -i 's/PS1=/PS2=/g' /etc/bash.bashrc
 
 USER gui
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 RUN mkdir -p /home/gui/.java
 RUN mkdir -p /home/gui/.Clion${VERSION}
+RUN mkdir -p /home/gui/.cache
 RUN mkdir -p /home/gui/.config
 RUN mkdir -p /home/gui/.rustup
 RUN mkdir -p /home/gui/.cargo
@@ -36,7 +37,8 @@ RUN mkdir -p /home/gui/.xcargo
 RUN mkdir -p /home/gui/Workspace
 
 COPY profile_gitbranch.sh /usr/bin/profile_gitbranch
-ENV export TERM=xterm-256color
-ENV PS1="\[\033[0;32m\]\t \[\033[0;31m\]\u\[\033[22;33m\]@\[\033[0;36m\]\h:\[\033[0;34m\]\w\$(profile_gitbranch)\[\033[0;37m\]: "
+RUN echo 'export TERM=xterm-256color' >> /home/gui/.bashrc
+RUN echo 'export PS1="\[\033[0;32m\]\\t \[\033[0;31m\]\u\[\033[22;33m\]@\[\033[0;36m\]\h:\[\033[0;34m\]\w\$(profile_gitbranch)\[\033[0;37m\]: "' >> /home/gui/.bashrc
+RUN echo 'export PATH=/home/gui/.cargo/bin:$PATH' >> /home/gui/.bashrc
 
 CMD ["/gui-app/bin/clion.sh"]
